--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <p id="date"></p>
     <footer>
       <center>
-      <a href='https://github.com/santos-pardos/'>
-        by @santos-pardos
+      <a href='https://github.com/palandeta'>
+        by @Pablo Landeta
       </a>
         </center>
     </footer>
